src/App.css
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');

.App-header{
  display: flex;
  height: 100px; 
  border-bottom: 1px solid #08a4da;
}
.logo {
  margin: auto 0 auto 40px;
}
.nav-bar {
  width: 100%;
}
.menu {
  border: 1px solid #e63f51;
  background-color: #f9f9f9;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: bolder;
  margin-right: 40px;
}
.menu p {
  display: inline;
  color: #007ca9;
}
.menu img {
  width: 20%; 
}
#hamburger {
  margin: 5px;
}
a {
  float: right;
  text-decoration: none;
  margin: 30px 15px;
  padding: 8px;
  color:#676767;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: bolder; 
  font-size: 120%; 
  cursor: pointer;
}
a:hover {
  color: #e63f51;
  font-size: 130%;
}
.tiles {
  border-top: 1px solid #d2e4ff;
  display: flex;
  justify-content: center;
  font-family: 'Source Sans Pro', sans-serif;
  height: 120px;
  background-color: #f9f9f9;
}
.tile-left, .tile-center, .tile-right {
  padding: 18px 80px;
  margin: 4px auto;
  display: flex;
  height: auto;
  background-color: #f9f9f9;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}
.tile-center {
  border-left: 1px dashed #08a4da;
  border-right: 1px dashed #08a4da;
}
h2, p {
  color: #676767;
  margin: 0;
  font-weight: bold;
  font-size: 2vw;
}
p {
  font-size: 0.95em;
  font-weight: bold;
}
h2 {
  margin-right: 60px;
}
.content-tile {
  margin-top: 6px;
}
.tiles img {
  height: auto;
  margin: 10px 28px;
  height: 60px;
}
.nav-bar img {
  float: right;
  border-bottom: 5px;
}
@media only screen and (max-width: 785px) {
  .tile-left, .tile-center, .tile-right {
    width: 100%;
    justify-content: center;
    border: none;
  }
  .navbar-links {
    display: none;
  }
  .tiles {
    flex-wrap: wrap;
  }
  h2, p {
    font-size: 20px;
  }
  .menu p {
    display: none;
  }
  .menu img {
    width: 20px;
  }
}

